feat(fhir): finalize OperationConvertor_40_50
Remove all TODOs, resolve remaining issues, reorganize code and tidy up.
Rename OperationConvertor_4b_50 to OperationConvertor_43_50